metrics/victoria-metrics/victoria-logs/httproute-protected/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vlogs-protected
spec:
  hostnames:
  - vlogs-m.suffix-automatic-replace
  parentRefs:
  - kind: Gateway
    namespace: gateways
    name: main-protected
    sectionName: https-main
  rules:
  - backendRefs:
    - kind: Service
      name: vlogs-server
      port: 9428
